--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
+
 html {
     box-sizing: border-box;
 }
@@ -5,4 +7,8 @@ html {
 body {
     margin: 0px;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(41, 238, 235, 0.4);
 }
